--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,14 @@ ul {
 
 
 body {
-    background-color: #F7EDE4;
+    background-color: #272625;
     margin: 0px;
     padding-top: 40px;
     padding-bottom: 120px;
 }
 
 .menu {
-    background: #FFF6E5;
+    background: #464442;
     position: fixed;
     width: 100%;
     top: 0;
